2004-06-28  Todd Berman  <tberman@off.net>

	* Internal/Codons/Templates/FileTemplateCodon.cs: add new codon for
	handling file templates.
	* Internal/Templates/FileTemplate.cs: Use the new codon based system
	instead of the old find files that end in .xft system. This means
	that you can now specify file templates in the addin.xml files and
	it brings us one step closer to being able to split off the backend
	bindings properly. (You will only see templates for bindings you have
	installed).

2004-06-26  Todd Berman  <tberman@off.net>

	* Gui/Dialogs/DirtyFilesDialog.cs: small layout fixes.

2004-06-26  Lluis Sanchez Gual  <lluis@ximian.com>

	* Commands/RunCommands.cs, Services/Project/DefaultProjectService.cs,
	  Internal/Project/Combine/CombineEntry.cs:
	  reflect changes in the TaskService.
	* Services/Tasks/Task.cs: Set comment type if the task do not refer to
	  a file.
	* Services/Tasks/TaskService.cs: Don't allow direct manipulation of the
	  task list, everything must be done through the TaskService api.
	  Added new TaskAdded event.
	* Gui/Pads/OpenTaskView.cs: Use the new TaskAdded event, instead of loading
	  the full list at every change.

2004-06-25  Todd Berman  <tberman@off.net>

	* Services/Project/DefaultProjectService.cs: When restoring combine
	preferences, if xml document is invalid, just return, closes bug
	#60417.

2004-06-25  Todd Berman  <tberman@off.net>

	* Gui/Dialogs/SharpDevelopAboutPanels.cs: Removing ASP mention at
	the request of Mike Krueger.

2004-06-25  Todd Berman  <tberman@off.net>

	* Gui/AbstractViewContent.cs: Make PathRelativeToProject not store in
	a string, and always be correct, no matter if the file is new, or has
	been moved since being loaded.
	* Gui/Dialogs/DirtyFilesDialog.cs: New dialog to use on close, should
	be working perfectly.
	* Gui/Dialogs/ReferenceDialog/GacReferencePanel.cs: formatting fixes.
	* Gui/IViewContent.cs: No longer all PathRelativeToProject to be set.